# neomutt

./: $output.in  .cirrus.yml  .clang-format  .clang_complete.in  .cvsignore  .editorconfig  .gitignore  .hgignore  .hgsigs  .hgtags  .lgtm.yml  .mailmap  .muttrc  .travis.yml  1  2  3  4  837673-fix-gpgme-sign-bindings.patch  ABOUT-NLS  AUTHORS.md  AUTOSETUP.md  BEWARE  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYRIGHT  COPYRIGHT.md  ChangeLog  ChangeLog.md  ChangeLog.neomutt  ChangeLog.nntp  ChangeLog.old  Changes  ExpandoNotes.md  INSTALL  INSTALL.md  LAST_TAG  LICENSE.md  (+510 more)
.ci/: common.sh  common_test.sh  run_tests_build.sh  run_tests_c_unit.sh  run_tests_func.sh  run_tests_unit.sh
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  REFACTORING_PATTERNS.md  codeql.yml  copilot-instructions.md  dependabot.yml  unused.sh
.travis/: deploy.sh  generate-webpage.sh  prep.sh  stats.sh  travis-deploy-github.enc
address/: address.c  address.h  (+12 more)
config/: Makefile.am  account.c  account.h  address.c  address.h  bool.c  bool.h  cache.c  cache.h  cfgaccount.c  cfgaccount.h  charset.c  charset.h  command.c  command.h  dump.c  dump.h  enum.c  enum.h  helpers.c  helpers.h  inheritance.h  lib.h  long.c  long.h  magic.c  magic.h  mbtable.c  mbtable.h  module.c  module_data.h  myvar.c  number.c  number.h  path.c  path.h  quad.c  quad.h  regex.c  regex2.h  (+12 more)
conn/: Makefile.am  account.h  accountcmd.c  accountcmd.h  config.c  conn.h  conn_globals.c  conn_globals.h  conn_private.h  conn_raw.c  connaccount.c  connaccount.h  connection.h  dlg_verifycert.c  dlgverifycert.c  getdomain.c  globals.c  globals.h  gnutls.c  gsasl.c  gsasl2.h  gui.c  lib.h  macos_keychain.c  macos_keychain.h  module.c  module_data.h  mutt_account.c  mutt_account.h  openssl.c  private.h  raw.c  sasl.c  sasl.h  sasl_plain.c  sasl_plain.h  socket.c  socket.h  ssl.c  ssl.h  (+5 more)
contrib/: Makefile.am  Makefile.autosetup  Makefile.in  Mush.rc  Pine.rc  README.md  Tin.rc  ca-bundle.crt  colors.default  colors.linux  gpg.rc  guix-neomutt.scm  language.txt  language50.txt  mutt_xtitle  patch.slang-1.2.2.keypad.1  pgp2.rc  pgp5.rc  pgp6.rc  sample.colors.attach_headers  sample.mailcap  sample.muttrc  sample.muttrc-compress  sample.muttrc-sidebar  sample.muttrc-tlr  sample.neomuttrc  sample.neomuttrc-starter  sample.neomuttrc-tlr  smime.rc  smime_keys  smime_keys_test.pl
contrib/account-command/: README.md  keychain.py
contrib/account-command/gpg-json/: README.md  credentials.sh
contrib/account-command/macos-keychain/: README.md
contrib/colorschemes/: neonwolf-256.muttrc  neonwolf-256.neomuttrc  solarized-dark-256.muttrc  solarized-dark-256.neomuttrc  vombatidae.mutt  vombatidae.neomuttrc  zenburn.neomuttrc
contrib/hcache-bench/: README.md  muttrc  neomutt-hcache-bench.sh  neomuttrc
contrib/iconv/: README  iconv.aix-3.2.5.rc  iconv.aix-4.1.5.rc  iconv.aix-4.2.0.rc  iconv.aix-4.3.2.rc  iconv.freebsd-3.3.rc  iconv.glibc-2.1.3.rc  iconv.glibc-2.1.90.rc  iconv.hpux-10.01.rc  iconv.hpux-10.20.rc  iconv.hpux-11.00.rc  iconv.irix-6.5.rc  iconv.osf1-4.0a.rc  iconv.osf1-4.0d.rc  iconv.solaris-2.4.rc  iconv.solaris-2.5.1.rc  iconv.solaris-2.6-cjk.rc  iconv.solaris-2.6.rc  iconv.solaris-2.7.rc  make.sh
contrib/keybase/: KeybaseAndMutt.md  README.md  decrypt.sh  install.sh  keybase.py  neomuttrc  pgpdecrypt.sh  pgpverify.sh  verify.sh
contrib/lua/: test_lua-api_runner.neomuttrc  test_lua-api_spec.lua
contrib/oauth2/: README.md  mutt_oauth2.py  mutt_oauth2.py.README
contrib/samples/: Mush.rc  Pine.rc  Tin.rc  colors.default  gpg.rc  mairix_filter.pl  markdown2html.py  sample.neomuttrc  sample.neomuttrc-starter  sample.neomuttrc-tlr  smime.rc  smime_keys_test.pl
contrib/vim-keybindings/: README.md
contrib/vim-keys/: README.md  vim-keys.rc
doc/: .cvsignore  Makefile.am  Makefile.autosetup  Makefile.in  Muttrc.head  PGP-Notes.txt  TODO  applying-patches.txt  chunk.xsl  db-cleanup.xsl  devel-notes.txt  dotlock.man  dotlock.man.in  gen-map-doc  html.xsl  instdoc.sh.in  language.txt  language50.txt  makedoc-defs.h  makedoc.c  makedoc_defs.h  makefile  manual.sgml  manual.sgml.head  manual.sgml.in  manual.sgml.tail  manual.txt  manual.xml.head  manual.xml.tail  mbox.5  mbox.man  mime.types  mmdf.man  mutt-1.7.0-syntax.vim  mutt.css  mutt.man  mutt.man.in  mutt.pwl  mutt.sgml  mutt.xsl  (+65 more)
hcache/: Makefile.am  README.md  backend.h  bdb.c  compr.h  compr_lz4.c  compr_zlib.c  compr_zstd.c  config.c  gdbm.c  hcache.c  hcache.h  hcachever.sh  kc.c  lib.h  lmdb.c  module.c  module_data.h  mutt_md5.c  qdbm.c  serialize.c  serialize.h  tc.c  tdb.c
imap/: BUGS  Makefile.am  README  TODO  adata.c  adata.h  auth.c  auth.h  auth_anon.c  auth_cram.c  auth_gsasl.c  auth_gss.c  auth_login.c  auth_oauth.c  auth_plain.c  auth_sasl.c  bodystructure.c  bodystructure.h  browse.c  command.c  config.c  edata.c  edata.h  imap.c  imap.h  imap_private.h  imap_socket.h  imap_ssl.c  imap_ssl.h  lib.h  md5.h  md5c.c  mdata.c  mdata.h  message.c  message.h  module.c  module_data.h  msg_set.c  msg_set.h  (+9 more)
lib/: Makefile.am  ascii.c  ascii.h  base64.c  base64.h  buffer.c  buffer.h  date.c  date.h  debug.h  exit.c  exit.h  file.c  file.h  hash.c  hash.h  lib.h  lib_ascii.c  lib_base64.c  lib_buffer.c  lib_buffer.h  lib_date.h  lib_debug.c  lib_file.c  lib_hash.c  lib_md5.c  lib_memory.c  lib_message.c  lib_sha1.c  lib_sha1.h  lib_string.c  lib_string.h  list.c  list.h  mapping.c  mapping.h  mbyte.c  mbyte.h  md5.c  md5.h  (+7 more)
ncrypt/: Makefile.am  config.c  crypt.c  crypt.h  crypt_gpgme.c  crypt_gpgme.h  crypt_mod.c  crypt_mod.h  crypt_mod_pgp_classic.c  crypt_mod_pgp_gpgme.c  crypt_mod_smime_classic.c  crypt_mod_smime_gpgme.c  cryptglue.c  cryptglue.h  dlg_gpgme.c  dlg_pgp.c  dlg_smime.c  dlggpgme.c  dlgpgp.c  dlgsmime.c  expando_command.c  expando_command.h  expando_gpgme.c  expando_gpgme.h  expando_pgp.c  expando_pgp.h  expando_smime.c  expando_smime.h  functions.c  functions_gpgme.c  functions_pgp.c  functions_smime.c  gnupgparse.c  gnupgparse.h  gpgme_functions.c  gpgme_functions.h  lib.h  module.c  module_data.h  ncrypt.h  (+22 more)
(+3426 files in other folders)
